--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "test-rust",
+  "name": "white-rabbit",
   "version": "0.1.0",
   "license": "MIT",
-  "packageManager": "yarn@3.5.1",
+  "packageManager": "yarn@3.6.0",
   "engines": {
     "yarn": ">=3",
     "node": ">=20"
@@ -14,14 +14,14 @@
   "scripts": {
     "prepare": "husky install",
     "build:rs": "cargo build --workspace --release",
-    "build:js": "yarn workspaces foreach -pitv --exclude test-rust run build",
+    "build:js": "yarn workspaces foreach -pitv --exclude white-rabbit run build",
     "build": "yarn build:js && yarn build:rs",
     "lint:rs": "cargo fmt --check && cargo clippy",
     "lint:stylelint": "stylelint '**/*.{vue,scss,css}' --ignore-path .eslintignore",
     "lint:base:prettier": "prettier '**/*.{vue,ts,js,json}' --ignore-path .eslintignore",
     "lint:prettier": "yarn lint:base:prettier --check",
     "lint:eslint": "eslint '**/*.{vue,ts,js}'",
-    "lint:tsc": "yarn workspaces foreach -pitv --exclude test-rust run lint:tsc",
+    "lint:tsc": "yarn workspaces foreach -pitv --exclude white-rabbit run lint:tsc",
     "lint:fix:prettier": "yarn lint:base:prettier --write",
     "lint:fix:eslint": "yarn lint:eslint --fix",
     "lint:fix:stylelint": "yarn lint:stylelint --fix",
@@ -29,7 +29,11 @@
     "lint:fix": "yarn lint:fix:eslint && yarn lint:fix:stylelint && yarn lint:fix:rs && yarn lint:fix:prettier",
     "lint": "yarn lint:eslint && yarn lint:stylelint && yarn lint:prettier && yarn lint:tsc && yarn lint:rs",
     "upgrade": "yarn upgrade-interactive && cargo update && cargo upgrade --incompatible --pinned",
-    "test": "cargo test"
+    "test": "cargo test",
+    "test:coverage": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info && yarn test:coverage:clean",
+    "test:coverage:test": "RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='coverage-%p-%m.profraw' cargo test",
+    "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --keep-only 'packages/*'",
+    "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.5",
@@ -42,8 +46,8 @@
     "@types/jsdom": "^21.1.1",
     "@types/node": "^20.2.5",
     "@types/prettier": "^2.7.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.8",
-    "@typescript-eslint/parser": "^5.59.8",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
     "@vitejs/plugin-vue": "^4.2.3",
     "@vitest/coverage-c8": "^0.31.4",
     "@vue/compiler-dom": "^3.3.4",
@@ -78,7 +82,7 @@
     "rollup-plugin-visualizer": "^5.9.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.1",
-    "stylelint": "^15.6.3",
+    "stylelint": "^15.7.0",
     "stylelint-config-recommended-scss": "^12.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard-scss": "^9.0.0",
