--- a/packages/frontend-core/package.json
+++ b/packages/frontend-core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@test-rust/frontend-core",
-  "packageManager": "yarn@3.5.1",
+  "name": "@white-rabbit/frontend-core",
+  "packageManager": "yarn@3.6.0",
   "type": "module",
   "version": "0.1.0",
   "scripts": {
@@ -41,6 +41,7 @@
   "devDependencies": {
     "rimraf": "^5.0.1",
     "vite": "^4.3.9",
+    "vitest": "^0.31.4",
     "vue-tsc": "^1.7.8"
   }
 }
