--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": ["stylelint-config-recommended-scss", "stylelint-config-recommended-vue/scss"]
+  "extends": ["stylelint-config-recommended-scss", "stylelint-config-recommended-vue/scss"],
+  "rules": {
+    "scss/at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": ["tailwind"]
+      }
+    ]
+  }
 }
