--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "build": "yarn build:js && yarn build:rs",
     "lint:rs": "cargo fmt --check && cargo clippy",
     "lint:stylelint": "stylelint '**/*.{vue,scss,css}' --ignore-path .eslintignore",
-    "lint:base:prettier": "prettier '**/*.{vue,ts,js,json}' --ignore-path .eslintignore",
+    "lint:base:prettier": "prettier '**/*.{vue,ts,js,cjs,json}' --ignore-path .eslintignore",
     "lint:prettier": "yarn lint:base:prettier --check",
-    "lint:eslint": "eslint '**/*.{vue,ts,js}'",
+    "lint:eslint": "eslint '**/*.{vue,ts,js,cjs}'",
     "lint:tsc": "yarn workspaces foreach -pitv --exclude white-rabbit run lint:tsc",
     "lint:fix:prettier": "yarn lint:base:prettier --write",
     "lint:fix:eslint": "yarn lint:eslint --fix",
@@ -41,26 +41,25 @@
     "@intlify/unplugin-vue-i18n": "^0.11.0",
     "@intlify/vite-plugin-vue-i18n": "^7.0.0",
     "@mdi/js": "^7.2.96",
-    "@quasar/vite-plugin": "^1.3.3",
     "@types/eslint": "^8.40.2",
     "@types/jsdom": "^21.1.1",
     "@types/node": "^20.3.1",
     "@types/prettier": "^2.7.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
-    "@typescript-eslint/parser": "^5.59.11",
+    "@typescript-eslint/eslint-plugin": "^5.60.0",
+    "@typescript-eslint/parser": "^5.60.0",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vitest/coverage-c8": "^0.32.0",
+    "@vitest/coverage-c8": "^0.32.2",
     "@vue/compiler-dom": "^3.3.4",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.3.2",
+    "@vue/test-utils": "^2.4.0",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.14",
     "commitizen": "^4.3.0",
     "commitlint": "^17.6.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.42.0",
+    "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
     "eslint-plugin-cypress": "^2.13.3",
@@ -71,18 +70,18 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.19.0",
-    "eslint-plugin-vue": "^9.14.1",
+    "eslint-plugin-vue": "^9.15.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
-    "markdownlint-cli": "^0.34.0",
+    "markdownlint-cli": "^0.35.0",
     "postcss": "^8.4.24",
     "postcss-html": "^1.5.0",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.63.4",
+    "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
-    "stylelint": "^15.7.0",
+    "stylelint": "^15.9.0",
     "stylelint-config-recommended-scss": "^12.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard-scss": "^9.0.0",
@@ -90,10 +89,11 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
-    "vitest": "^0.32.0",
+    "vite-plugin-vuetify": "^1.0.2",
+    "vitest": "^0.32.2",
     "vue": "^3.3.4",
     "vue-eslint-parser": "^9.3.1",
-    "vue-tsc": "^1.7.12"
+    "vue-tsc": "^1.8.1"
   },
   "config": {
     "commitizen": {
