--- a/packages/backend-core/Cargo.toml
+++ b/packages/backend-core/Cargo.toml
@@ -7,22 +7,22 @@ edition = "2021"
 [dependencies]
 async-trait = "0.1"
 base64 = "0.21"
-chrono = { version = "0.4", features = [ "serde" ] }
+chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 env_logger = "0.10"
 futures = "0.3"
-itertools = "0.10"
+itertools = "0.11"
 log = "0.4"
-rust_decimal = "1.29"
-sea-orm = { version = "0.11", features = [ "macros" ] }
+rust_decimal = { version = "1.30", features = ["serde-with-arbitrary-precision"] }
+sea-orm = { version = "0.11", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-strum = "0.24"
-strum_macros = "0.24"
+strum = "0.25"
+strum_macros = "0.25"
 thiserror = "1.0"
 tokio = { version = "1.28", features = ["rt", "macros"] }
 uuid = { version = "1.3", features = ["serde", "v4"] }
 
 [dev-dependencies]
-sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+sea-orm = { version = "0.11", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
 test-suite = { path = "../test-suite" }
