--- a/packages/frontend-core/package.json
+++ b/packages/frontend-core/package.json
@@ -9,39 +9,40 @@
     "clean": "rimraf dist/"
   },
   "dependencies": {
-    "@ag-grid-community/client-side-row-model": "^30.0.0",
-    "@ag-grid-community/core": "^30.0.0",
-    "@ag-grid-community/styles": "^30.0.0",
-    "@ag-grid-community/vue3": "^30.0.0",
-    "@ag-grid-enterprise/charts": "^30.0.0",
-    "@ag-grid-enterprise/clipboard": "^30.0.0",
-    "@ag-grid-enterprise/column-tool-panel": "^30.0.0",
-    "@ag-grid-enterprise/core": "^30.0.0",
-    "@ag-grid-enterprise/excel-export": "^30.0.0",
-    "@ag-grid-enterprise/filter-tool-panel": "^30.0.0",
-    "@ag-grid-enterprise/menu": "^30.0.0",
-    "@ag-grid-enterprise/multi-filter": "^30.0.0",
-    "@ag-grid-enterprise/range-selection": "^30.0.0",
-    "@ag-grid-enterprise/rich-select": "^30.0.0",
-    "@ag-grid-enterprise/row-grouping": "^30.0.0",
-    "@ag-grid-enterprise/set-filter": "^30.0.0",
-    "@ag-grid-enterprise/side-bar": "^30.0.0",
-    "@ag-grid-enterprise/status-bar": "^30.0.0",
+    "@ag-grid-community/client-side-row-model": "^30.0.2",
+    "@ag-grid-community/core": "^30.0.2",
+    "@ag-grid-community/styles": "^30.0.2",
+    "@ag-grid-community/vue3": "^30.0.2",
+    "@ag-grid-enterprise/charts": "^30.0.2",
+    "@ag-grid-enterprise/clipboard": "^30.0.2",
+    "@ag-grid-enterprise/column-tool-panel": "^30.0.2",
+    "@ag-grid-enterprise/core": "^30.0.2",
+    "@ag-grid-enterprise/excel-export": "^30.0.2",
+    "@ag-grid-enterprise/filter-tool-panel": "^30.0.2",
+    "@ag-grid-enterprise/menu": "^30.0.2",
+    "@ag-grid-enterprise/multi-filter": "^30.0.2",
+    "@ag-grid-enterprise/range-selection": "^30.0.2",
+    "@ag-grid-enterprise/rich-select": "^30.0.2",
+    "@ag-grid-enterprise/row-grouping": "^30.0.2",
+    "@ag-grid-enterprise/set-filter": "^30.0.2",
+    "@ag-grid-enterprise/side-bar": "^30.0.2",
+    "@ag-grid-enterprise/status-bar": "^30.0.2",
     "@fortawesome/fontawesome-free": "^6.4.0",
-    "@quasar/extras": "^1.16.4",
-    "@vueuse/core": "^10.1.2",
-    "pinia": "^2.1.3",
-    "quasar": "^2.12.0",
+    "@types/uuid": "^9.0.2",
+    "@vueuse/core": "^10.2.0",
+    "pinia": "^2.1.4",
     "tailwindcss": "^3.3.2",
     "uuid": "^9.0.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.2"
+    "vue-router": "^4.2.2",
+    "vuetify": "^3.3.5"
   },
   "devDependencies": {
+    "material-design-icons-iconfont": "^6.7.0",
     "rimraf": "^5.0.1",
     "vite": "^4.3.9",
-    "vitest": "^0.32.0",
-    "vue-tsc": "^1.7.12"
+    "vitest": "^0.32.2",
+    "vue-tsc": "^1.8.1"
   }
 }
