--- a/package.json
+++ b/package.json
@@ -38,16 +38,16 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.6",
     "@commitlint/config-conventional": "^17.6.6",
-    "@intlify/unplugin-vue-i18n": "^0.11.0",
+    "@intlify/unplugin-vue-i18n": "^0.12.0",
     "@mdi/js": "^7.2.96",
     "@types/eslint": "^8.40.2",
     "@types/jsdom": "^21.1.1",
-    "@types/node": "^20.3.3",
+    "@types/node": "^20.4.0",
     "@types/prettier": "^2.7.3",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "^5.61.0",
+    "@typescript-eslint/parser": "^5.61.0",
     "@vitejs/plugin-vue": "^4.2.3",
-    "@vitest/coverage-c8": "^0.32.2",
+    "@vitest/coverage-v8": "^0.33.0",
     "@vue/compiler-dom": "^3.3.4",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
@@ -73,26 +73,26 @@
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "markdownlint-cli": "^0.35.0",
-    "postcss": "^8.4.24",
+    "postcss": "^8.4.25",
     "postcss-html": "^1.5.0",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.0",
     "rimraf": "^5.0.1",
     "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
-    "stylelint": "^15.9.0",
+    "stylelint": "^15.10.1",
     "stylelint-config-recommended-scss": "^12.0.0",
     "stylelint-config-recommended-vue": "^1.4.0",
     "stylelint-config-standard-scss": "^10.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.6",
-    "vite": "^4.3.9",
+    "vite": "^4.4.1",
     "vite-plugin-vuetify": "^1.0.2",
-    "vitest": "^0.32.2",
+    "vitest": "^0.33.0",
     "vue": "^3.3.4",
     "vue-eslint-parser": "^9.3.1",
-    "vue-tsc": "^1.8.3"
+    "vue-tsc": "^1.8.4"
   },
   "config": {
     "commitizen": {
