--- a/packages/backend-core/Cargo.toml
+++ b/packages/backend-core/Cargo.toml
@@ -24,5 +24,7 @@ tokio = { version = "1.29", features = ["rt", "macros"] }
 uuid = { version = "1.4", features = ["serde", "v4"] }
 
 [dev-dependencies]
+anyhow = "*"
+rust_decimal_macros = "1.30"
 sea-orm = { version = "0.11", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
 test-suite = { path = "../test-suite" }
