--- a/packages/backend-core/Cargo.toml
+++ b/packages/backend-core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.75"
 async-trait = "0.1"
 base64 = "0.21"
 chrono = { version = "0.4", features = ["serde"] }
@@ -14,6 +15,7 @@ futures = "0.3"
 itertools = "0.11"
 log = "0.4"
 rust_decimal = { version = "1.32", features = ["serde-with-arbitrary-precision"] }
+rust_decimal_macros = "1.32"
 sea-orm = { version = "0.12", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
