--- a/packages/frontend-core/package.json
+++ b/packages/frontend-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@white-rabbit/frontend-core",
-  "packageManager": "yarn@3.6.3",
+  "packageManager": "yarn@3.6.4",
   "version": "0.1.0",
   "scripts": {
     "test": "vitest run --coverage",
@@ -11,37 +11,40 @@
     "clean": "rimraf dist/"
   },
   "dependencies": {
-    "@ag-grid-community/client-side-row-model": "^30.1.0",
-    "@ag-grid-community/core": "^30.1.0",
-    "@ag-grid-community/styles": "^30.1.0",
-    "@ag-grid-community/vue3": "^30.1.0",
-    "@ag-grid-enterprise/clipboard": "^30.1.0",
-    "@ag-grid-enterprise/column-tool-panel": "^30.1.0",
-    "@ag-grid-enterprise/core": "^30.1.0",
-    "@ag-grid-enterprise/filter-tool-panel": "^30.1.0",
-    "@ag-grid-enterprise/menu": "^30.1.0",
-    "@ag-grid-enterprise/multi-filter": "^30.1.0",
-    "@ag-grid-enterprise/range-selection": "^30.1.0",
-    "@ag-grid-enterprise/rich-select": "^30.1.0",
-    "@ag-grid-enterprise/row-grouping": "^30.1.0",
-    "@ag-grid-enterprise/set-filter": "^30.1.0",
-    "@ag-grid-enterprise/side-bar": "^30.1.0",
-    "@ag-grid-enterprise/status-bar": "^30.1.0",
+    "@ag-grid-community/client-side-row-model": "^30.2.0",
+    "@ag-grid-community/core": "^30.2.0",
+    "@ag-grid-community/styles": "^30.2.0",
+    "@ag-grid-community/vue3": "^30.2.0",
+    "@ag-grid-enterprise/clipboard": "^30.2.0",
+    "@ag-grid-enterprise/column-tool-panel": "^30.2.0",
+    "@ag-grid-enterprise/core": "^30.2.0",
+    "@ag-grid-enterprise/filter-tool-panel": "^30.2.0",
+    "@ag-grid-enterprise/menu": "^30.2.0",
+    "@ag-grid-enterprise/multi-filter": "^30.2.0",
+    "@ag-grid-enterprise/range-selection": "^30.2.0",
+    "@ag-grid-enterprise/rich-select": "^30.2.0",
+    "@ag-grid-enterprise/row-grouping": "^30.2.0",
+    "@ag-grid-enterprise/set-filter": "^30.2.0",
+    "@ag-grid-enterprise/side-bar": "^30.2.0",
+    "@ag-grid-enterprise/status-bar": "^30.2.0",
     "@date-io/date-fns": "^2.17.0",
-    "@vueuse/core": "^10.4.1",
+    "@vueuse/core": "^10.5.0",
+    "ag-charts-community": "^8.2.0",
+    "ag-charts-vue3": "^8.2.0",
     "date-fns": "^2.30.0",
     "tailwindcss": "^3.3.3",
-    "uuid": "^9.0.0",
+    "uuid": "^9.0.1",
     "vue": "^3.3.4",
-    "vue-i18n": "^9.4.0",
-    "vue-router": "^4.2.4",
-    "vuetify": "^3.3.15"
+    "vue-class-component": "^8.0.0-rc.1",
+    "vue-i18n": "^9.5.0",
+    "vue-router": "^4.2.5",
+    "vuetify": "^3.3.20"
   },
   "devDependencies": {
-    "@types/uuid": "^9.0.3",
-    "rimraf": "^5.0.1",
-    "vite": "^4.4.9",
-    "vitest": "^0.34.4",
-    "vue-tsc": "^1.8.10"
+    "@types/uuid": "^9.0.5",
+    "rimraf": "^5.0.5",
+    "vite": "^4.4.11",
+    "vitest": "^0.34.6",
+    "vue-tsc": "^1.8.18"
   }
 }
