--- a/packages/test-suite/Cargo.toml
+++ b/packages/test-suite/Cargo.toml
@@ -11,7 +11,7 @@ backend-core = { path = "../backend-core" }
 chrono = { version = "0.4", features = [ "serde" ] }
 dotenv = "0.15"
 env_logger = "0.10"
-fake = { version = "2.8", features = ["bigdecimal"] }
+fake = { version = "2.8", features = ["bigdecimal", "chrono"] }
 futures = "0.3"
 itertools = "0.11"
 log = "0.4"
