--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "white-rabbit",
   "version": "0.1.0",
   "license": "MIT",
-  "packageManager": "yarn@3.6.4",
+  "packageManager": "yarn@4.0.0",
   "engines": {
     "yarn": ">=3",
     "node": ">=20"
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "build": "yarn workspaces foreach -pitv --exclude white-rabbit run build",
+    "build": "yarn workspaces foreach -Wpitv --exclude white-rabbit run build",
     "lint:rs": "cargo fmt --check && cargo clippy",
     "lint:fix:rs": "cargo sort -w && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
     "lint:stylelint": "stylelint '**/*.{vue,scss,css}' --ignore-path .eslintignore",
@@ -21,8 +21,8 @@
     "lint:base:prettier": "prettier '**/*.{vue,ts,js,mjs,json}' --ignore-path .eslintignore",
     "lint:prettier": "yarn lint:base:prettier --check",
     "lint:fix:prettier": "yarn lint:base:prettier --write",
-    "lint:fix": "yarn lint:fix:prettier && yarn lint:fix:stylelint && yarn lint:fix:rs && yarn workspaces foreach -pitv --exclude white-rabbit run lint:fix",
-    "lint": "yarn lint:prettier && yarn lint:stylelint && yarn lint:rs && yarn workspaces foreach -pitv --exclude white-rabbit run lint",
+    "lint:fix": "yarn lint:fix:prettier && yarn lint:fix:stylelint && yarn lint:fix:rs && yarn workspaces foreach -Wpitv --exclude white-rabbit run lint:fix",
+    "lint": "yarn lint:prettier && yarn lint:stylelint && yarn lint:rs && yarn workspaces foreach -Wpitv --exclude white-rabbit run lint",
     "upgrade": "yarn upgrade-interactive && cargo update && cargo upgrade --incompatible --pinned",
     "test": "cargo test",
     "test:coverage": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info && yarn test:coverage:clean",
@@ -37,12 +37,12 @@
     "@quasar/vite-plugin": "^1.5.0",
     "@types/eslint": "^8.44.6",
     "@types/jsdom": "^21.1.4",
-    "@types/node": "^20.8.7",
-    "@typescript-eslint/eslint-plugin": "^6.8.0",
-    "@typescript-eslint/parser": "^6.8.0",
+    "@types/node": "^20.8.8",
+    "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vitest/coverage-v8": "^0.34.6",
-    "@vue/compiler-dom": "^3.3.6",
+    "@vue/compiler-dom": "^3.3.7",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
@@ -64,7 +64,7 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.21.0",
-    "eslint-plugin-vue": "^9.17.0",
+    "eslint-plugin-vue": "^9.18.0",
     "husky": "^8.0.3",
     "jsdom": "^22.1.0",
     "markdownlint-cli": "^0.37.0",
@@ -74,20 +74,20 @@
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "1.32.12",
+    "sass": "^1.69.4",
     "sass-loader": "^13.3.2",
     "stylelint": "^15.11.0",
     "stylelint-config-recommended-scss": "^13.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^11.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "tailwindcss": "^3.3.3",
+    "tailwindcss": "^3.3.4",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6",
-    "vue": "^3.3.6",
+    "vue": "^3.3.7",
     "vue-eslint-parser": "^9.3.2",
-    "vue-tsc": "^1.8.19"
+    "vue-tsc": "^1.8.20"
   },
   "config": {
     "commitizen": {
