--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "prepare": "husky install",
-    "build": "yarn workspaces foreach -Wpitv --exclude white-rabbit run build",
+    "build": "yarn workspaces foreach --from 'packages/*' -Rpitv run build",
     "lint:rs": "cargo fmt --check && cargo clippy",
     "lint:fix:rs": "cargo sort -w && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
     "lint:stylelint": "stylelint '**/*.{vue,scss,css}' --ignore-path .eslintignore",
@@ -21,8 +21,8 @@
     "lint:base:prettier": "prettier '**/*.{vue,ts,js,mjs,json}' --ignore-path .eslintignore",
     "lint:prettier": "yarn lint:base:prettier --check",
     "lint:fix:prettier": "yarn lint:base:prettier --write",
-    "lint:fix": "yarn lint:fix:prettier && yarn lint:fix:stylelint && yarn lint:fix:rs && yarn workspaces foreach -Wpitv --exclude white-rabbit run lint:fix",
-    "lint": "yarn lint:prettier && yarn lint:stylelint && yarn lint:rs && yarn workspaces foreach -Wpitv --exclude white-rabbit run lint",
+    "lint:fix": "yarn lint:fix:prettier && yarn lint:fix:stylelint && yarn lint:fix:rs && yarn workspaces foreach --from 'packages/*' -Rpitv run lint:fix",
+    "lint": "yarn lint:prettier && yarn lint:stylelint && yarn lint:rs && yarn workspaces foreach --from 'packages/*' -Rpitv run lint",
     "upgrade": "yarn upgrade-interactive && cargo update && cargo upgrade --incompatible --pinned",
     "test": "cargo test",
     "test:coverage": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info && yarn test:coverage:clean",
@@ -31,13 +31,14 @@
     "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.0.0",
-    "@commitlint/config-conventional": "^18.0.0",
+    "@commitlint/cli": "^18.1.0",
+    "@commitlint/config-conventional": "^18.1.0",
     "@intlify/unplugin-vue-i18n": "^1.4.0",
     "@quasar/vite-plugin": "^1.5.0",
     "@types/eslint": "^8.44.6",
     "@types/jsdom": "^21.1.4",
-    "@types/node": "^20.8.8",
+    "@types/lodash": "^4.14.200",
+    "@types/node": "^20.8.9",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "@vitejs/plugin-vue": "^4.4.0",
@@ -49,7 +50,7 @@
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
     "commitizen": "^4.3.0",
-    "commitlint": "^18.0.0",
+    "commitlint": "^18.1.0",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.52.0",
@@ -74,20 +75,20 @@
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.69.4",
+    "sass": "^1.69.5",
     "sass-loader": "^13.3.2",
     "stylelint": "^15.11.0",
     "stylelint-config-recommended-scss": "^13.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^11.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "tailwindcss": "^3.3.4",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
     "vitest": "^0.34.6",
     "vue": "^3.3.7",
     "vue-eslint-parser": "^9.3.2",
-    "vue-tsc": "^1.8.20"
+    "vue-tsc": "^1.8.21"
   },
   "config": {
     "commitizen": {
