--- a/packages/frontend-core/package.json
+++ b/packages/frontend-core/package.json
@@ -33,8 +33,9 @@
     "ag-charts-community": "^8.2.0",
     "ag-charts-vue3": "^8.2.0",
     "date-fns": "^2.30.0",
+    "lodash": "^4.17.21",
     "quasar": "^2.13.0",
-    "tailwindcss": "^3.3.4",
+    "tailwindcss": "^3.3.5",
     "uuid": "^9.0.1",
     "vue": "^3.3.7",
     "vue-class-component": "^8.0.0-rc.1",
@@ -46,6 +47,6 @@
     "rimraf": "^5.0.5",
     "vite": "^4.5.0",
     "vitest": "^0.34.6",
-    "vue-tsc": "^1.8.20"
+    "vue-tsc": "^1.8.21"
   }
 }
