--- a/packages/backend-core/Cargo.toml
+++ b/packages/backend-core/Cargo.toml
@@ -12,10 +12,10 @@ chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 env_logger = "0.10"
 futures = "0.3"
-itertools = "0.11"
+itertools = "0.12"
 log = "0.4"
-rust_decimal = { version = "1.32", features = ["serde-with-arbitrary-precision"] }
-rust_decimal_macros = "1.32"
+rust_decimal = { version = "1.33", features = ["serde-with-arbitrary-precision"] }
+rust_decimal_macros = "1.33"
 sea-orm = { version = "0.12", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -23,10 +23,10 @@ strum = "0.25"
 strum_macros = "0.25"
 thiserror = "1.0"
 tokio = { version = "1.34", features = ["rt", "macros"] }
-uuid = { version = "1.5", features = ["serde", "v4"] }
+uuid = { version = "1.6", features = ["serde", "v4", "macro-diagnostics"] }
 
 [dev-dependencies]
 anyhow = "1.0"
-rust_decimal_macros = "1.32"
+rust_decimal_macros = "1.33"
 sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
 test-suite = { path = "../test-suite" }
