--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "white-rabbit",
   "version": "0.1.0",
   "license": "MIT",
-  "packageManager": "yarn@4.0.2",
+  "packageManager": "yarn@4.1.0",
   "engines": {
     "yarn": ">=4",
     "node": ">=20"
@@ -12,7 +12,7 @@
     "packages/app-desktop"
   ],
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "build": "yarn workspaces foreach --from 'packages/*' -Rpitv run build",
     "lint:rs": "cargo fmt --check && cargo clippy",
     "lint:fix:rs": "cargo sort -w && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
@@ -31,63 +31,63 @@
     "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
+    "@commitlint/cli": "^18.6.1",
+    "@commitlint/config-conventional": "^18.6.2",
     "@intlify/unplugin-vue-i18n": "^2.0.0",
     "@quasar/vite-plugin": "^1.6.0",
-    "@types/eslint": "^8.56.1",
+    "@types/eslint": "^8.56.3",
     "@types/jsdom": "^21.1.6",
     "@types/lodash": "^4.14.202",
-    "@types/node": "^20.10.6",
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "@vitejs/plugin-vue": "^5.0.2",
-    "@vitest/coverage-v8": "^1.1.1",
-    "@vue/compiler-dom": "^3.4.3",
+    "@types/node": "^20.11.20",
+    "@typescript-eslint/eslint-plugin": "^7.1.0",
+    "@typescript-eslint/parser": "^7.1.0",
+    "@vitejs/plugin-vue": "^5.0.4",
+    "@vitest/coverage-v8": "^1.3.1",
+    "@vue/compiler-dom": "^3.4.20",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
-    "@vue/test-utils": "^2.4.3",
+    "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "commitizen": "^4.3.0",
-    "commitlint": "^18.4.3",
+    "commitlint": "^18.6.1",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard-with-typescript": "^43.0.0",
+    "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.1",
+    "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
-    "eslint-plugin-vue": "^9.19.2",
-    "husky": "^8.0.3",
-    "jsdom": "^23.0.1",
-    "markdownlint-cli": "^0.38.0",
-    "postcss": "^8.4.32",
-    "postcss-html": "^1.5.0",
-    "postcss-load-config": "^5.0.2",
-    "prettier": "^3.1.1",
+    "eslint-plugin-sonarjs": "^0.24.0",
+    "eslint-plugin-vue": "^9.22.0",
+    "husky": "^9.0.11",
+    "jsdom": "^24.0.0",
+    "markdownlint-cli": "^0.39.0",
+    "postcss": "^8.4.35",
+    "postcss-html": "^1.6.0",
+    "postcss-load-config": "^5.0.3",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.69.7",
-    "sass-loader": "^13.3.3",
-    "stylelint": "^16.1.0",
+    "sass": "^1.71.1",
+    "sass-loader": "^14.1.1",
+    "stylelint": "^16.2.1",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard-scss": "^12.0.0",
+    "stylelint-config-standard-scss": "^13.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.10",
-    "vitest": "^1.1.1",
-    "vue": "^3.4.3",
-    "vue-eslint-parser": "^9.3.2",
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1",
+    "vue": "^3.4.20",
+    "vue-eslint-parser": "^9.4.2",
     "vue-tsc": "^1.8.27"
   },
   "config": {
