--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
     "@types/jsdom": "^21.1.6",
     "@types/lodash": "^4.17.0",
     "@types/node": "^20.11.30",
-    "@typescript-eslint/eslint-plugin": "^7.3.1",
-    "@typescript-eslint/parser": "^7.3.1",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vitest/coverage-v8": "^1.4.0",
     "@vue/compiler-dom": "^3.4.21",
@@ -48,7 +48,7 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.18",
+    "autoprefixer": "^10.4.19",
     "commitizen": "^4.3.0",
     "commitlint": "^19.2.1",
     "cross-env": "^7.0.3",
@@ -65,11 +65,11 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.24.0",
-    "eslint-plugin-vue": "^9.23.0",
+    "eslint-plugin-vue": "^9.24.0",
     "husky": "^9.0.11",
     "jsdom": "^24.0.0",
     "markdownlint-cli": "^0.39.0",
-    "postcss": "^8.4.37",
+    "postcss": "^8.4.38",
     "postcss-html": "^1.6.0",
     "postcss-load-config": "^5.0.3",
     "prettier": "^3.2.5",
@@ -77,22 +77,25 @@
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.72.0",
     "sass-loader": "^14.1.1",
-    "stylelint": "^16.2.1",
+    "stylelint": "^16.3.0",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2",
-    "vite": "^5.1.6",
+    "typescript": "^5.4.3",
+    "vite": "^5.2.6",
     "vitest": "^1.4.0",
     "vue": "^3.4.21",
     "vue-eslint-parser": "^9.4.2",
-    "vue-tsc": "^2.0.6"
+    "vue-tsc": "^2.0.7"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "resolutions": {
+    "stylelint": "16.2.1"
   }
 }
