--- a/packages/backend-core/Cargo.toml
+++ b/packages/backend-core/Cargo.toml
@@ -12,6 +12,7 @@ chrono = { version = "0.4", features = ["serde"] }
 dotenv = "0.15"
 env_logger = "0.11"
 futures = "0.3"
+http = "1.1"
 itertools = "0.12"
 log = "0.4"
 rust_decimal = { version = "1.35", features = ["serde-with-arbitrary-precision"] }
